--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Table Practice</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <title>Table Practice</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <!--
 
     Create a table of Contact Info for the following CEOs.
     See README.md for more info.
@@ -21,34 +23,45 @@
     Add the headings and give the data below the structure it needs.
     -->
 
-    Company
-    Name
-    Street
-    City/State/ZIP
+  <table>
+    <tr>
+      <th>Company</th>
+      <th>Name</th>
+      <th>Street</th>
+      <th>City/Sate/Zipcode</th>
+    </tr>
+    <tr>
+      <td>MIcrosoft Corp.</td>
+      <td>Satya Nadella</td>
+      <td>1 Microsoft Way</td>
+      <td>Redmond, WA 98052</td>
+    </tr>
+    <tr>
+      <td>Apple, Inc.</td>
+      <td>Tim Cook</td>
+      <td>1 Infinate Loop</td>
+      <td>Cupertino, CA 95014</td>
+    </tr>
+    <tr>
+      <td>Apple, Inc.</td>
+      <td>Arthur D. Levinson</td>
+      <td>1 Infinate Loop</td>
+      <td>Cupertino, CA 95014</td>
+    </tr>
+    <tr>
+      <td>Amazon.com, Inc</td>
+      <td>Jeff Bezos</td>
+      <td>No Adress Available</td>
+    </tr>
+    <tr>
+      <td>Tesla, Inc.</td>
+      <td>Elon Musk</td>
+      <td>3500 Deer Creek</td>
+      <td>Palo Alto, CA 94034</td>
+    </tr>
 
-    Microsoft Corp.
-    Satya Nadella
-    1 Microsoft Way
-    Redmond, WA 98052
+  </table>
 
-    Apple, Inc.
-    Tim Cook
-    1 Infinite Loop
-    Cupertino, CA 95014
+</body>
 
-    Apple, Inc.
-    Arthur D. Levinson
-    1 Infinite Loop
-    Cupertino, CA 95014
-
-    Amazon.com, Inc.
-    Jeff Bezos
-    No Address Available
-
-    Tesla, Inc.
-    Elon Musk
-    3500 Deer Creek
-    Palo Alto, CA 94034
-
-  </body>
 </html>
